--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Good's</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
@@ -228,43 +228,8 @@ body {
     footer .copyright {
       font-weight: 500;
     }
-
-    /* --- Для экранов шириной до 768px (телефоны и маленькие планшеты) --- */
-@media (max-width: 768px) {
-
-  body {
-    padding-top: 60px; /* чуть меньше отступа сверху */
-  }
-
-  h1 {
-    font-size: 22px;
-    text-align: center;
-  }
-
-  .container {
-    width: 95%;
-    margin: auto;
-    padding: 15px;
-  }
-
-  .btn, button[type="submit"] {
-    width: 100%;
-    font-size: 15px;
-  }
-
-  nav {
-    text-align: center;
-  }
-
-  .navbar-brand {
-    font-size: 18px;
-  }
-}
-
-    
   </style>
 </head>
-
 <body>
   <!-- Навбар -->
   <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
