--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         position: fixed;
         bottom: 30px;
         right: 30px;
-        background: linear-gradient(135deg, var(--accent), var(--accent-2));
+        background: var(--accent);
         color: #fff;
         width: 60px;
         height: 60px;
@@ -516,7 +516,7 @@
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
       <div class="container-fluid px-3">
-        <a class="navbar-brand" href="#">🌑 Goods</a>
+        <a class="navbar-brand" href="#">🌑 Goods Studio</a>
         <div class="d-flex ms-auto align-items-center gap-2">
           <a class="btn btn-custom" href="#about">Обо мне</a>
           <a class="btn btn-custom" href="#projects">Проекты</a>
@@ -541,7 +541,7 @@
               Создаю игры и сайты, люблю дизайн и код. Этот сайт демонстрирует
               мои проекты и навыки.
             </li>
-            <li>Основатель компании: Goods ©</li>
+            <li>Основатель компании: Goods Studio ©</li>
             <li>
               Текущий проект: Night Prison (Roblox) — в разработке, с уникальной
               механикой и кастомными мирами.
@@ -606,7 +606,7 @@
         </div>
 
         <div class="project-card">
-          <h3>🌐 Site Builder</h3>
+          <h3>🌐 Site Building</h3>
           <p>
             Конструктор сайтов с автоматической публикацией на GitHub Pages,
             drag & drop редактор, адаптивный дизайн и быстрый старт для
@@ -687,7 +687,7 @@
             <option>Программист 🧑🏻‍💻</option>
             <option>Дизайнер 🎨</option>
             <option>Игрок 🎮</option>
-            <option>Другое 🃏</option>
+            <option>Другое 😉</option>
           </select>
 
           <button type="submit" aria-label="Отправить заявку">
@@ -718,7 +718,7 @@
         </a>
       </div>
       <hr style="border: none; border-top: 1px solid rgba(255, 255, 255, 0.08); margin: 15px 0;">
-      <p style="margin: 0; font-size: 14px;">© 2026 Goods — Все права защищены</p>
+      <p style="margin: 0; font-size: 14px;">2026 Goods Studio © — Все права защищены</p>
     </footer>
 
     <button id="scrollToTop" title="Вернуться наверх">⬆️</button>
